<resources>

    <string name="app_name">Yast</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="log_in">Log In</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="username">testuser</string>
    <string name="password">testpass</string>
    <string name="comment_hint">comment for ending project</string>

</resources>